# Obscur

./: .env.signing.local.example  .gitignore  .tmp_use-profile_head.ts  .tmp_use-relay-list_head.ts  .vercelignore  AGENTS.md  ARCHITECTURE_EXPLAINED.md  ARCHIVE.md  CHANGELOG.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_v0.2.5.md  INTEGRATION_SUMMARY.md  ISSUES.md  NATIVE_BACKEND_PLAN.md  PHASE0_SPECS.md  PHASE1_SPECS.md  PHASE2_SPECS.md  PHASE3_SPECS.md  PHASE4_SPECS.md  PROJECT_STATUS.md  README.md  README_DOCS_DELETION.md  ROADMAP.md  ROADMAP_v0.2.5.md  ROADMAP_v0.9.0-beta.md  VERSION_SYNC_STRATEGY.md  build_log.txt  build_log_2.txt  build_log_3.txt  client.cdp.yaml  debugging_status_report.md  file_upload_status.md  fix-large-files.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  quick-fix-commands.sh  safe-fix-approach.md  tauri_help.txt  (+8 more)
apps/desktop/src-tauri/: Cargo.toml  android_cargo_error.txt  android_cargo_error_2.txt  android_cargo_error_3.txt  android_cargo_error_4.txt  android_cargo_error_5.txt  android_cargo_error_6.txt  android_cargo_error_7.txt  android_cargo_error_8.txt  android_cargo_error_9.txt  build.rs  build_log.txt  check_errors.txt  error.txt  error_final.txt  tauri.conf.json  tauri.dev.conf.json  tauri.live.dev.conf.json  updater-key.txt.pub
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: desktop.json  mobile.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: app.toml
apps/desktop/src-tauri/src/: active_session_leases.rs  data_root.rs  data_root_bind.rs  dev_shell_freshness.rs  keychain_session_envelope.rs  lib.rs  local_save_scan.rs  main.rs  native_keychain.rs  net.rs  platform_biometric.rs  profile_web_storage_harvest.rs  profiles.rs  protocol.rs  relay.rs  session.rs  storage_at_rest_state.rs  update_channel.rs  upload.rs  wallet.rs  warmup.rs  windows_junction.rs
apps/desktop/src-tauri/src/commands/: auth_boot.rs  data_root.rs  db.rs  engine.rs  les.rs  local_save.rs  login_assist.rs  mod.rs  notification.rs  profile.rs  profile_storage.rs  session.rs  storage_at_rest.rs  system.rs  tor.rs  transport_engine.rs  tray.rs  warmup.rs  window.rs
apps/desktop/src-tauri/src/models/: app.rs  mod.rs  tor.rs  tray.rs  window.rs
apps/desktop/src-tauri/src/services/: mod.rs  tray.rs
apps/desktop/src-tauri/target-check/: .rustc_info.json
apps/desktop/src-tauri/target-check/debug/.fingerprint/adler2-5dc37c8ecf01c0a3/: lib-adler2
apps/desktop/src-tauri/target-check/debug/.fingerprint/aead-133ff87c15b98d80/: lib-aead
apps/desktop/src-tauri/target-check/debug/.fingerprint/aes-6d289264077ad7f3/: lib-aes
apps/desktop/src-tauri/target-check/debug/.fingerprint/ahash-5c137d430303c56d/: build-script-build-script-build  build-script-build-script-build.json
apps/desktop/src-tauri/target-check/debug/.fingerprint/ahash-a2deed7bb137613d/: lib-ahash
apps/desktop/src-tauri/target-check/debug/.fingerprint/ahash-f217b71c021219bb/: run-build-script-build-script-build
apps/desktop/src-tauri/target-check/debug/.fingerprint/aho-corasick-85520061f6160b64/: lib-aho_corasick  lib-aho_corasick.json
apps/desktop/src-tauri/target-check/debug/.fingerprint/aho-corasick-b27b24f3ada96de5/: lib-aho_corasick  lib-aho_corasick.json
apps/desktop/src-tauri/target-check/debug/.fingerprint/alloc-no-stdlib-96b490aafb47524d/: lib-alloc_no_stdlib.json
apps/desktop/src-tauri/target-check/debug/.fingerprint/alloc-no-stdlib-b0ba27f31962387a/: lib-alloc_no_stdlib
apps/desktop/src-tauri/target-check/debug/.fingerprint/alloc-stdlib-4d2019a0da83e2d7/: lib-alloc_stdlib
apps/desktop/src-tauri/target-check/debug/.fingerprint/anstream-ed191f9c320af4a4/: lib-anstream.json
apps/desktop/src-tauri/target-check/debug/.fingerprint/anstyle-31ff53b80f524596/: lib-anstyle  lib-anstyle.json
apps/desktop/src-tauri/target-check/debug/.fingerprint/anstyle-parse-4ae759c0fdb8d2be/: lib-anstyle_parse
apps/desktop/src-tauri/target-check/debug/.fingerprint/anstyle-query-beb0a98fbe4cfbc8/: lib-anstyle_query.json
apps/desktop/src-tauri/target-check/debug/.fingerprint/anstyle-wincon-74fe83dab9aa3fc8/: lib-anstyle_wincon.json
(+8685 files in other folders)
