[package]
name = "obscur-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

# Release profile optimizations for smaller binary size and better performance
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization at cost of compile time
strip = true        # Strip symbols from binary
panic = "abort"     # Reduce binary size by removing unwinding code
