[package]
name = "obscur_desktop_lib"
version = "0.3.6"
edition = "2021"

[lib]
name = "obscur_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

# Development profile optimizations for disk space
[profile.dev]
incremental = false # Saves disk space at the cost of slightly slower re-compiles
debug = 0           # Strips debug symbols (huge space saver)
strip = "debuginfo" # Further removal of debug info

# Release profile optimizations for smaller binary size and better performance
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization at cost of compile time
strip = true        # Strip symbols from binary
panic = "abort"     # Reduce binary size by removing unwinding code
