[package]
name = "obscur_desktop_lib"
version = "0.7.4"
edition = "2021"

[lib]
name = "obscur_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "obscur_desktop_app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-upload = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.12.28", default-features = false, features = ["multipart", "json", "rustls-tls", "blocking", "socks"] }
base64 = "0.22.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
url = "2.5.8"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.31"
uuid = { version = "1.20.0", features = ["v4"] }
nostr = { version = "0.38", features = ["nip04"] }
zeroize = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-socks = "0.5.2"
rustls-native-certs = "0.8.1"
rustls = { version = "0.23.23", default-features = false, features = ["std"] }

# Platform-specific dependencies
[target.'cfg(not(target_os = "android"))'.dependencies]
keyring = "3"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-store = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

# Development profile optimizations for disk space
[profile.dev]
incremental = false # Saves disk space at the cost of slightly slower re-compiles
debug = 0           # Strips debug symbols (huge space saver)
strip = "debuginfo" # Further removal of debug info

# Release profile optimizations for smaller binary size and better performance
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization at cost of compile time
strip = true        # Strip symbols from binary
panic = "abort"     # Reduce binary size by removing unwinding code
